style bug fix: (NoResultFound) The BUG: dark mode some how did not fill the entire view port The FIX: set the parent(root) element height to 100% and inherited that height in App component

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 .App {
   display: flex;
   justify-content: space-around;
+  min-height: 100%;
 }
 
 .main-container {
