--- a/src/index.scss
+++ b/src/index.scss
@@ -1,1 +1,5 @@
 @use "./scss/main.scss";
+
+#root {
+  height: inherit;
+}
