--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,6 +11,11 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  height: 100%;
+}
+
 button,
 input {
   appearance: none;
